# barber-crm

./: .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  START_HERE.md  SUPABASE_RLS.md  docker-compose.yml  start.ps1
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.docker  .flake8  Dockerfile  celerybeat-schedule  conftest.py  create_sample_data.py  db.sqlite3  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_dev.py
backend/apps/: test_health.py
backend/apps/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/appointments/: admin.py  models.py  serializers.py  test_api.py  tests.py  views.py
backend/apps/businesses/: __init__.py  admin.py  models.py  serializers.py  test_api.py  tests.py  views.py
backend/apps/customers/: admin.py  models.py  serializers.py  views.py
backend/apps/services/: admin.py  models.py  serializers.py  views.py
backend/apps/staff/: __init__.py  admin.py  models.py  serializers.py  views.py
backend/config/: celery.py  health.py  settings.py  urls.py
frontend/: .pre-commit-config.yaml  .secrets.baseline  Dockerfile  pyproject.toml  requirements.txt  rxconfig.py
frontend/barber_crm/: __init__.py  barber_crm.py  layout.py  state.py  styles.py
frontend/barber_crm/pages/: __init__.py  appointments.py  auth.py  customers.py  dashboard.py  services.py  staff.py
frontend/scripts/: reflex_linter.py  setup_linting.ps1
k8s/: backend.yaml  celery.yaml  configmap.yaml  ingress.yaml  namespace.yaml  redis.yaml  secrets.yaml
(+5 files in other folders)
