[project]
name = "barber-crm-frontend"
version = "0.1.0"
description = "Barber CRM Frontend - Reflex Application"
requires-python = ">=3.10"

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Line length
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".web",
    ".states",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
# Enable these rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in Reflex)
    "B904",   # raise without from (noisy)
    "SIM108", # ternary instead of if-else (conflicts with rx.cond)
    "RUF012", # mutable class attributes (Reflex uses these for state)
]

# Allow autofix for all rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["barber_crm"]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix line endings
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
